Fix light/dark mode button.

--- a/style.css
+++ b/style.css
@@ -28,9 +28,7 @@ input[type=number]:focus::-webkit-inner-spin-button {
     padding-bottom: 0.2rem;
 }
 .light-dark-btn {
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 30px auto;
     display: table;
 }
 @media (min-width: 768px) {
